[package]
name = "clocker"
version = "2.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version="4.5.49", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
thiserror = "2.0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
